# ailog

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  OAUTH_INTEGRATION_CHANGES.md  README.md  action.yml  ai_prompt.txt  claude.md  cloudflared-config.yml  content.md  mcp_integration.md  package.json  readme.md  run.zsh  vercel.json  vite.config.ts  wrangler.toml
.claude/: settings.local.json
.gitea/workflows/: cloudflare-pages.yml  deploy.yml  example-usage.yml  release.yml
.github/workflows/: build-binary.yml  cf-pages.yml  cloudflare-pages.yml  deploy.yml  gh-pages-fast.yml  release.yml
ai-conversation/: .env  .env.production  build-minimal.js  index.html  package.json  vite.config.js
ai-conversation/json/: ai.syui.ai_chat_lang.json  ai.syui.ai_log.json  ai.syui.ai_user.json
ai-conversation/src/: App.css  App.jsx  main.jsx
aicard-web-oauth/: .env  .env.development  .env.production  index.html  package.json  vite.config.ts
aicard-web-oauth/public/: client-metadata.json
aicard-web-oauth/src/: App.css  App.tsx  main.tsx
lexicons/: ai.syui.at.link.json  ai.syui.card.admin.json  ai.syui.card.old.json  ai.syui.card.user.json  ai.syui.gpt.core.json  ai.syui.gpt.memory.json  ai.syui.log.chat.json  ai.syui.note.post.json  ai.syui.rse.admin.json  ai.syui.rse.user.json  ai.syui.vrm.json  site.standard.document.json  site.standard.publication.json
my-blog/: config.toml
my-blog/layouts/: at-browser-assets.html  game.html  index.html  oauth-assets.html  pds-header.html  pds.html  post-simple.html  post.html
my-blog/oauth/: .env.production
my-blog/static/: _headers  _redirects  client-metadata.json  index.html  index.json
my-blog/templates/: ai-conversation-assets.html  base.html  index.html  oauth-assets.html  pds.html  post-complex.html  post-simple.html  post.html
oauth/: .env.production  AVATAR_USAGE_EXAMPLES.md  CLOUDFLARE_DEPLOY.yml  IMPLEMENTATION_GUIDE.md  OAUTH_FIX.md  README.md  build-minimal.js  index.html  package.json  vite.config.ts
oauth/json/: ai.syui.ai_chat_comment.json
oauth/public/: client-metadata.json
oauth/src/: App.css  App.jsx  App.tsx  main.jsx  main.tsx
oauth_new/: .env  ASK_AI_INTEGRATION.md  AVATAR_SYSTEM.md  CLOUDFLARE_DEPLOY_WITH_CLEANUP.yml  DEPLOYMENT.md  DEVELOPMENT.md  ENV_SETUP.md  IMPROVEMENT_PLAN.md  PHASE1_QUICK_FIXES.md  PROGRESS.md  cleanup-deployments.yml  package.json
oauth_new/json/: syui.syui.ai_chat.json
oauth_new/src/: App.jsx  main.jsx
pds/: index.html  package.json  vite.config.js
pds/src/: App.css  App.jsx  config.js  index.js
public/: _redirects  card  client-metadata.json  config.json  networks.json
public/.well-known/: site.standard.publication
public/card/: 2.blend
scpt/: delete-chat-records.zsh  run.zsh
src/: config.rs  doc_generator.rs  error.rs  generator.rs  lib.rs  main.rs  markdown.rs  oauth.rs  ollama_proxy.rs  shortcode.rs  template.rs  tid.rs  types.rs  xrpc.rs
src/ai/: comment.rs  editor.rs  gpt_client.rs  mod.rs  translator.rs
src/analyzer/: mod.rs  rust_analyzer.rs
src/atproto/: client.rs  comment_sync.rs  mod.rs  oauth.rs  profile.rs
src/commands/: auth.rs  bot.rs  build.rs  clean.rs  doc.rs  gpt.rs  index.rs  init.rs  interactive.rs  mod.rs  new.rs  notify.rs  oauth.rs  pds.rs  post.rs  push.rs  record.rs  sync.rs  (+7 more)
templates/: api.md  changelog.md  readme.md  structure.md
test-blog/: config.toml
workers/: ollama-proxy.js  wrangler.toml
(+608 files in other folders)
